chore(java8): maintain java 8 compatibility in new patch builders
Apply the same Java 8 compat changes from #17075 to the patch builder
files introduced in this PR that use List.of()/Map.of(), which are
Java 9+ APIs.

Co-authored-by: Jay <jayacryl@users.noreply.github.com>